[gd_scene load_steps=7 format=2]

[ext_resource path="res://Game/Scripts/WIN.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Title_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://MainMenu/UI/Main Menu.tres" type="Theme" id=3]
[ext_resource path="res://Game/AnimatedPlayer/PlayerAnimation.tres" type="SpriteFrames" id=4]
[ext_resource path="res://Game/materials/p1Shader.tres" type="Material" id=5]
[ext_resource path="res://Game/materials/p2Shader.tres" type="Material" id=6]

[node name="WIN menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
color = Color( 0, 0, 0, 1 )

[node name="Win_info" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -171.0
margin_top = 100.0
margin_right = 171.0
margin_bottom = 151.0
custom_fonts/font = ExtResource( 2 )
text = "WINS!"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -74.0
margin_top = -64.0
margin_right = 74.0
margin_bottom = 64.0
theme = ExtResource( 3 )

[node name="Button" type="Button" parent="VBoxContainer"]
margin_right = 172.0
margin_bottom = 41.0
text = "Restart"

[node name="Button2" type="Button" parent="VBoxContainer"]
margin_top = 45.0
margin_right = 172.0
margin_bottom = 86.0
text = "Main Menu"

[node name="Winner" type="AnimatedSprite" parent="."]
material = ExtResource( 6 )
position = Vector2( 303, 251 )
scale = Vector2( 0.75, 0.75 )
frames = ExtResource( 4 )
animation = "Idle"
playing = true
flip_h = true

[node name="Loser" type="AnimatedSprite" parent="."]
material = ExtResource( 5 )
position = Vector2( 778, 364 )
rotation = 1.42419
scale = Vector2( 0.75, 0.75 )
frames = ExtResource( 4 )
animation = "Fireball"
frame = 6

[connection signal="button_down" from="VBoxContainer/Button" to="." method="_on_Button_button_down"]
[connection signal="button_down" from="VBoxContainer/Button2" to="." method="_on_Button2_button_down"]
